# alertmanager-mcp

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml
alertmanager_mcp/: __init__.py  __main__.py  client.py  config.py  mcp_tools.py  server.py
docs/prd/: 2025-12-11-alertmanager-mcp-server.md
src/alertmanager_mcp/: client.py  config.py  factory.py  mcp_tools.py  server.py
tests/: conftest.py  test_client.py  test_mcp_tools.py
