[project]
name = "alertmanager-mcp"
version = "0.1.0"
description = "MCP Server for Prometheus Alertmanager"
authors = [{name = "Benjamin Borbe", email = "bborbe@rocketnews.de"}]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.11.3",
]

[project.scripts]
alertmanager-mcp = "alertmanager_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alertmanager_mcp"]
